--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,12 @@
             android:textAlignment="viewStart" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Try Kotlin"
+        android:layout_gravity="center"/>
+
 </LinearLayout>
